--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "mernblog",
+  "name": "yetanotherblogapp",
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api/index.js",
